fixes blur on safari

--- a/style.css
+++ b/style.css
@@ -640,6 +640,9 @@ img.magnifying-glass, img.globe{
 	height: 100%;
 	filter: blur(5px);
 	backdrop-filter: blur(6px);
+	-webkit-backdrop-filter: blur(6px);
+	-moz-backdrop-filter: blur(6px);
+	-ms-backdrop-filter: blur(6px);
 	background: rgba(245,245,245,0.1);
 	z-index: -1;
 }
